--- a/python/airi/templates/server-setup.html
+++ b/python/airi/templates/server-setup.html
@@ -48,42 +48,40 @@
 <form method="post" action="/server-setup.html">
 
 <div data-role="collapsible-set"  style="padding: 0px; margin: 5px 12px 0px;">
-  <div data-role="collapsible" data-collapsed="false">
-    <h3>Pairing configuration</h3>
-    <p>
-    <i>If your system allows it AIRi server can handle pairing. Only supported on some systems like Linux.</i>
-    <br/>
-    <br/>
-    Each option is composed of a block address (or a perfect match) and a PIN number. <br/>
-    There's a default option which you can edit, but can't delete.
-    <br/>
-    </p>
+	<div data-role="collapsible" data-collapsed="false">
+		<h3>Pairing configuration</h3>
+		{% if pairing_supported %}
+			<p>
+				Each option is composed of a block address (or a perfect match) and a PIN number. <br/>
+				There's a default option which you can edit, but can't delete.
+			</p>
 
-    <div class="ui-grid-b">
-      <div class="ui-block-a" style="width: 50%;">Block Address</div>
-      <div class="ui-block-b" style="width: 50%;">PIN</div>
-    {% if not pins %}
-      {% set pins=() %}
-    {% endif %}
-    {% for b,p in pins.iteritems() %}
-      <div class="ui-block-a" style="width: 50%;">
-        <input name="block_{{ loop.index0 }}" value="{{ b }}"  style="width: 95%"/>
-      </div>
-      <div class="ui-block-b" style="width: 47%;">
-        <input name="value_{{ loop.index0 }}" value="{{ p }}"  style="width: 95%"/>
-      </div>
-      <div class="ui-block-c" style="width: 3%;">
-        <button type="submit" name="delete" data-icon="delete" value="{{ b }}" data-iconpos="notext"></button>
-      </div>
-    {% endfor %}
-      <div class="ui-block-a" style="width: 50%;">
-        <input name="block" value="" style="width: 95%"/>
-      </div>
-      <div class="ui-block-b" style="width: 47%;">
-        <input name="value" value="" style="width: 95%" />
-      </div>
-    </div>
-  </div>
+			<div class="ui-grid-b">
+				<div class="ui-block-a" style="width: 50%;">Block Address</div>
+				<div class="ui-block-b" style="width: 50%;">PIN</div>
+				{% if not pins %}{% set pins=() %}{% endif %}
+				{% for b,p in pins.iteritems() %}
+					<div class="ui-block-a" style="width: 50%;">
+						<input name="block_{{ loop.index0 }}" value="{{ b }}"  style="width: 95%"/>
+					</div>
+					<div class="ui-block-b" style="width: 47%;">
+						<input name="value_{{ loop.index0 }}" value="{{ p }}"  style="width: 95%"/>
+					</div>
+					<div class="ui-block-c" style="width: 3%;">
+						<button type="submit" name="delete" data-icon="delete" value="{{ b }}" data-iconpos="notext"></button>
+					</div>
+				{% endfor %}
+				<div class="ui-block-a" style="width: 50%;">
+					<input name="block" value="" style="width: 95%"/>
+				</div>
+				<div class="ui-block-b" style="width: 47%;">
+					<input name="value" value="" style="width: 95%" />
+				</div>
+			</div>
+		{% else %}
+			<strong>Not Supported feature</strong>
+		{% endif %}
+	</div>
 </div>
 
 <div class="ui-grid-a">
