--- a/python/airi/templates/setup.html
+++ b/python/airi/templates/setup.html
@@ -2,7 +2,7 @@
 
 {% block title %}Setup{% endblock %}
 {% block id %}setup{%endblock %}
-{% block header_title %}AIRi Camera Configuration{% endblock %}
+{% block header_title %}Camera Setup{% endblock %}
 
 {% macro fieldcontain(id, label, type, value, readonly=False) -%}
     <div data-role="fieldcontain">
