--- a/python/airi/templates/base.html
+++ b/python/airi/templates/base.html
@@ -16,7 +16,8 @@
     <script type="text/javascript" src="/media/js/jquery.mobile-1.0a4.1.js"></script>
     <script type="text/javascript" src="/media/js/jquery.mobile.tabs.js"></script>
     <script type="text/javascript" src="/media/js/jquery-ui-1.8.11.custom.min.js"></script>
-    <script type="text/javascript" src="/media/js/jquery.tools.min.js"></script>
+	<script type="text/javascript" src="/media/js/jquery.tools.min.js"></script>
+	<script type="text/javascript" src="/media/js/jQueryRotate.2.1.js"></script>
     {% block extrahead %}{% endblock %}
 </head>
 
