--- a/python/airi/templates/stream.html
+++ b/python/airi/templates/stream.html
@@ -41,10 +41,130 @@
   </div>
 {%- endmacro %}
 
+{% macro button33(options, function) %}
+	{% for option in options %}
+	<a class="button-33 
+		{% if loop.index % 3 == 1 %}
+			ui-corner-left
+		{% elif loop.index %3 == 0 %}
+			ui-corner-right
+		{% endif %}
+		" data-role="button" href="javascript: {{function}}('{{option}}')">{{option}}</a>
+	{% endfor %}
+{% endmacro %}
+
 {% macro inputbox(label, id, value, disabled=False) %}
   <label for="{{ id }}">{{ label }}:</label>
   <input id="{{ id }}" type="text" {% if disabled %}readonly="readonly" {% endif %} value="{{ value }}" />
 {% endmacro %}
+
+{% macro tab_controls() %}
+	<div class="inline ui-grid-a">
+		<div class="ui-block-a">
+			{{ button( "javascript: switchState()", "Connect", extra='id="stream-connect"', theme="b", enable=not camera.status) }}
+			{{ button( "javascript: switchState()", "Disconnect", extra='id="stream-disconnect"', theme="e", enable = camera.status ) }}
+		</div>
+		<div class="ui-block-b">
+			{{ button( "/setup.html?address="+camera.address, "Setup" ) }}
+		</div>
+	</div>
+
+	<div data-role="fieldcontain">
+		<fieldset data-role="controlgroup" data-type="horizontal">
+			<legend>Resolution:</legend>
+			{{ button33(camera.capabilities.size, "switchResolution") }}
+		</fieldset>
+	</div>
+
+	<div class="pan-control">
+		<div class="ui-controlgroup-label" style="float: left;">Pan:</div>
+		<div class="ui-controlgroup-controls">
+			<div class="ui-grid-b">
+				<div class="ui-block-a">
+					<a href="javascript: doConfigure('pan', 'UL')"	data-role="button" data-icon="arrow-u" data-iconpos="notext" class="rotate-45">UL</a>
+				</div>
+				<div class="ui-block-b">
+					<a href="javascript: doConfigure('pan', 'U')"	data-role="button" data-icon="arrow-u" data-iconpos="notext">U</a>
+				</div>
+				<div class="ui-block-c">
+					<a href="javascript: doConfigure('pan', 'UR')"	data-role="button" data-icon="arrow-r" data-iconpos="notext" class="rotate-45">UR</a>
+				</div>
+				<div class="ui-block-a">
+					<a href="javascript: doConfigure('pan', 'L')"	data-role="button" data-icon="arrow-l" data-iconpos="notext">L</a>
+				</div>
+				<div class="ui-block-b">
+					<a href="javascript: doConfigure('pan', 'N')"	data-role="button" data-icon="delete" data-iconpos="notext">Reset</a>
+				</div>
+				<div class="ui-block-c">
+					<a href="javascript: doConfigure('pan', 'R')"	data-role="button" data-icon="arrow-r" data-iconpos="notext">R</a>
+				</div>
+				<div class="ui-block-a">
+					<a href="javascript: doConfigure('pan', 'DL')"	data-role="button" data-icon="arrow-l" data-iconpos="notext" class="rotate-45">DL</a>
+				</div>
+				<div class="ui-block-b">
+					<a href="javascript: doConfigure('pan', 'D')"	data-role="button" data-icon="arrow-d" data-iconpos="notext">D</a>
+				</div>
+				<div class="ui-block-c">
+					<a href="javascript: doConfigure('pan', 'DR')"	data-role="button" data-icon="arrow-d" data-iconpos="notext" class="rotate-45">DR</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div data-role="fieldcontain">
+		<fieldset data-role="controlgroup" data-type="horizontal">
+			<legend>Flash:</legend>
+			<a style="width: 49%" href="javascript: doConfigure('flash', True)" data-role="button">On</a>
+			<a style="width: 49%" href="javascript: doConfigure('flash', False)" data-role="button">Off</a>
+		</fieldset>
+	</div>
+
+	<div data-role="fieldcontain">
+		<fieldset data-role="controlgroup" data-type="horizontal">
+			<legend>Voice:</legend>
+			<a style="width: 49%" href="javascript: doConfigure('voice', True)" data-role="button">On</a>
+			<a style="width: 49%" href="javascript: doConfigure('voice', False)" data-role="button">Off</a>
+		</fieldset>
+	</div>
+
+	<div data-role="fieldcontain">
+		<fieldset  data-role="controlgroup" data-type="horizontal">
+			<legend>Exposure:</legend>
+			<a class="button-33" href="javascript: doConfigure('exposure',  1)" data-role="button">66ms</a>
+			<a class="button-33" href="javascript: doConfigure('exposure',  2)" data-role="button">135ms</a>
+			<a class="button-33 ui-corner-right" href="javascript: doConfigure('exposure',  4)" data-role="button">270ms</a>
+			<a class="button-33 ui-corner-left" href="javascript: doConfigure('exposure',  8)" data-role="button">533ms</a>
+			<a class="button-33" href="javascript: doConfigure('exposure',  15)" data-role="button">1 s</a>
+			<a class="button-33" href="javascript: doConfigure('exposure',  31)" data-role="button">2 s</a>
+		</fieldset>
+	</div>
+{% endmacro %}
+
+{% macro tab_information() %}
+	{{ information("Address", camera.address, "stream-address") }}
+	{{ information("Name", camera.name, "stream-name") }}
+	{{ information("Type", camera.type, "stream-type") }}
+	{{ information("Status", camera.status, "stream-status") }}
+	{{ information("Stream URL", "/stream/"+camera.address, "stream-url") }}
+	{{ information("Last Connection", camera.last, "stream-last") }}
+	{{ information("Transport", camera.transport, "stream-transport") }}
+	{# 
+		{{ information("Automatically Reconnect", camera.reconnect, "stream-reconnect") }}
+		{{ information("Reconnect Timeout", camera.reconnect_timeout, "stream-reconnect_timeout") }}
+	#}
+	{% if pairing_supported %}
+		{{ information("Use Device PIN", camera.enable_pincode, "stream-enable_pincode") }}
+		{{ information("PIN Code", camera.pin, "stream-pin") }}
+	{% endif %}
+
+	{% if camera.capabilities.battery %}
+		{{ information("Battery (mv)", camera.battery, "stream-battery") }}
+	{% else %}
+		{{ information("Battery (mv)", "Not supported", "stream-battery", class="ui-body-e") }}
+	{% endif %}
+{% endmacro %}
+
+
 
 {% block extra_header %}
     <div id="tab" data-role="tabs"> {# style="display: none">#}
@@ -60,184 +180,44 @@
 <div data-airi="mobile">
     <div id="tab-video" class="video-holder">
         <div id="video-content" class="video-player">
-            You don't have Flash installed, you can't use this viewer.
+			<span>You don't have Flash installed, you can't use this viewer.</span>
+			<br>
             <a href="/stream/{{ camera.address.replace(':', '_')}}">But you can watch the stream here</a>
         </div>
     </div>
-    <div id="tab-controls">
-        <div class="inline ui-grid-a">
-            <div class="ui-block-a">
-                {{ button( "javascript: switchState()", "Connect", extra='id="stream-connect"', theme="b", enable=not camera.status) }}
-                {{ button( "javascript: switchState()", "Disconnect", extra='id="stream-disconnect"', theme="e", enable = camera.status ) }}
-            </div>
-            <div class="ui-block-b">
-                {{ button( "/setup.html?address="+camera.address, "Setup" ) }}
-            </div>
-        </div>
-
-        {{ select("stream-size", "Resolution", camera.capabilities.size, camera.size ) }}
-
-        {% if camera.capabilities.pan|length > 0 %}
-            {{ select("stream-pan", "Pan", camera.capabilities.pan, camera.pan ) }}
-        {% else %}
-            <div data-role="fieldcontain">
-              <label for="stream-pan">Pan:</label>
-              <input type="text" id="stream-pan" readonly="readonly" class="ui-body-e" value="Not Supported" />
-            </div>
-        {% endif %}
-
-        <div data-role="fieldcontain">
-            {% if camera.capabilities.flash %}
-                <a href="javascript: switchFlash()" data-role="button" id="stream-flash"
-                  data-state="{{camera.flash}}">Flash</a>
-            {% else %}
-                <label for="stream-flash">Flash:</label>
-                <input type="text" id="stream-flash" data-notsupported="true" readonly="readonly" class="ui-body-e" value="Not Supported" />
-            {% endif %}
-        </div>
-
-        <div data-role="fieldcontain">
-            {% if camera.capabilities.voice %}
-                <a href="javascript: switchVoice()" data-role="button" id="stream-voice"
-                    data-state="{{camera.voice}}">Voice</a>
-            {% else %}
-                <label for="stream-voice">Voice:</label>
-                <input type="text" id="stream-voice" data-notsupported="true" readonly="readonly" class="ui-body-e" value="Not Supported" />
-            {% endif %}
-        </div>
-
-        <div data-role="fieldcontain">
-            <label for="stream-exposure">Exposure Time (ms):</label>
-            {% if camera.capabilities.exposure %}
-                <input type="number" id="stream-exposure-display" value="{{ camera.exposure }}"
-                    style="width: 4em;" readonly="readonly" />
-                <input type="hidden" id="stream-exposure" value="{{ camera.exposure }}" />
-                <div id="stream-exposure-slider" style="display: inline-block"></div>
-            {% else %}
-                <input type="text" id="stream-exposure" data-notsupported="true" readonly="readonly" class="ui-body-e" value="Not Supported" />
-            {% endif %}
-        </div>
+	<div id="tab-controls">
+		{{ tab_controls() }}
     </div>
 
     <div id="tab-information">
-          {{ information("Address", camera.address, "stream-address") }}
-          {{ information("Name", camera.name, "stream-name") }}
-          {{ information("Type", camera.type, "stream-type") }}
-          {{ information("Status", camera.status, "stream-status") }}
-          {{ information("Stream URL", "/stream/"+camera.address, "stream-url") }}
-          {{ information("Last Connection", camera.last, "stream-last") }}
-          {{ information("Transport", camera.transport, "stream-transport") }}
-          {{ information("Automatically Reconnect", camera.reconnect, "stream-reconnect") }}
-          {{ information("Reconnect Timeout", camera.reconnect_timeout, "stream-reconnect_timeout") }}
-          {% if pairing_supported %}
-			{{ information("Use Device PIN", camera.enable_pincode,
-				"stream-enable_pincode") }}
-			{{ information("PIN Code", camera.pin, "stream-pin") }}
-          {% endif %}
-
-          {% if camera.capabilities.battery %}
-            {{ information("Battery (mv)", camera.battery, "stream-battery") }}
-          {% else %}
-            {{ information("Battery (mv)", "Not supported", "stream-battery", class="ui-body-e") }}
-          {% endif %}
+		{{ tab_information() }}
     </div>
 </div>
 
 <div data-airi="desktop">
-<div id="video" class="video-holder">
-  <div id="flash_container" style="display: none"></div>
-  <div id="video-content" class="video-player">
-    You don't have Flash installed, you can't use this viewer.
-    <a href="/stream/{{ camera.address.replace(':', '_')}}">But you can watch the stream here</a>
-  </div>
-</div>
+	<div id="video" class="video-holder">
+		<div id="flash_container" style="display: none"></div>
+		<div id="video-content" class="video-player">
+			<span>You don't have Flash installed, you can't use this viewer.</span>
+			<br>
+			<a href="/stream/{{ camera.address.replace(':', '_')}}">But you can watch the stream here</a>
+		</div>
+	</div>
 
-<div id="controls" class="video-controls ui-body ui-body-b">
-  <form>
-  <div data-role="collapsible-set">
-    <div data-role="collapsible" data-collapsed="false">
-      <h4>Device Information</h4>
-      {{ information("Address", camera.address, "stream-address") }}
-	  {{ information("Name", camera.name, "stream-name") }}
-	  {{ information("Stream URL", "/stream/"+camera.address, "stream-url") }}
-      {{ information("Type", camera.type, "stream-type") }}
-      {{ information("Status", camera.status, "stream-status") }}
-      {{ information("Last Connection", camera.last, "stream-last") }}
-      {{ information("Transport", camera.transport, "stream-transport") }}
-      {{ information("Automatically Reconnect", camera.reconnect, "stream-reconnect") }}
-      {{ information("Reconnect Timeout", camera.reconnect_timeout, "stream-reconnect_timeout") }}
-	  {% if pairing_supported %}
-			{{ information("Use Device PIN", camera.enable_pincode,
-				"stream-enable_pincode") }}
-			{{ information("PIN Code", camera.pin, "stream-pin") }}
-	  {% endif %}
-
-      {% if camera.capabilities.battery %}
-        {{ information("Battery (mv)", camera.battery, "stream-battery") }}
-      {% else %}
-        {{ information("Battery (mv)", "Not supported", "stream-battery", class="ui-body-e") }}
-      {% endif %}
-
-      <div class="ui-grid-a">
-        <div class="ui-block-a">
-          {{ button( "javascript: switchState()", "Connect", extra='id="stream-connect"', theme="b", enable=not camera.status) }}
-          {{ button( "javascript: switchState()", "Disconnect", extra='id="stream-disconnect"', theme="e", enable = camera.status ) }}
-        </div>
-        <div class="ui-block-b">
-          {{ button( "/setup.html?address="+camera.address, "Camera Setup" ) }}
-        </div>
-      </div>
-    </div>
-    <div data-role="collapsible" data-collapsed="true">
-      <h4>Camera Management</h4>
-
-      {{ select("stream-size", "Resolution", camera.capabilities.size, camera.size ) }}
-
-      {% if camera.capabilities.pan|length > 0 %}
-        {{ select("stream-pan", "Pan", camera.capabilities.pan, camera.pan ) }}
-      {% else %}
-        <div data-role="fieldcontain">
-          <label for="stream-pan">Pan:</label>
-          <input type="text" id="stream-pan" readonly="readonly" class="ui-body-e" value="Not Supported" />
-        </div>
-      {% endif %}
-
-      <div data-role="fieldcontain">
-      {% if camera.capabilities.flash %}
-        <a href="javascript: switchFlash()" data-role="button" id="stream-flash"
-          data-state="{{camera.flash}}">Flash</a>
-      {% else %}
-        <label for="stream-flash">Flash:</label>
-        <input type="text" id="stream-flash" data-notsupported="true" readonly="readonly" class="ui-body-e" value="Not Supported" />
-      {% endif %}
-      </div>
-
-      <div data-role="fieldcontain">
-      {% if camera.capabilities.voice %}
-        <a href="javascript: switchVoice()" data-role="button" id="stream-voice"
-          data-state="{{camera.voice}}">Voice</a>
-      {% else %}
-        <label for="stream-voice">Voice:</label>
-        <input type="text" id="stream-voice" data-notsupported="true" readonly="readonly" class="ui-body-e" value="Not Supported" />
-      {% endif %}
-      </div>
-
-      <div data-role="fieldcontain">
-        <label for="stream-exposure">Exposure Time (ms):</label>
-      {% if camera.capabilities.exposure %}
-          <input type="number" id="stream-exposure-display" value="{{ camera.exposure }}"
-            style="width: 4em;" readonly="readonly" />
-          <input type="hidden" id="stream-exposure" value="{{ camera.exposure }}" />
-          <div id="stream-exposure-slider" style="display: inline-block"></div>
-      {% else %}
-        <input type="text" id="stream-exposure" data-notsupported="true" readonly="readonly" class="ui-body-e" value="Not Supported" />
-      {% endif %}
-      </div>
-    </div>
-  </div>
-  </form>
-</div>
-
+	<div id="controls" class="video-controls ui-body ui-body-b">
+		<form>
+			<div data-role="collapsible-set">
+				<div data-role="collapsible" data-collapsed="false">
+					<h4>Device Information</h4>
+					{{ tab_information () }}
+				</div>
+				<div data-role="collapsible" data-collapsed="true">
+					<h4>Camera Management</h4>
+					{{ tab_controls() }}
+				</div>
+			</div>
+		</form>
+	</div>
 </div>
 {% endblock %}
 
