removed jquery ui as depedency upgraded jquery version to 1.6.1

--- a/python/airi/templates/base.html
+++ b/python/airi/templates/base.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="/media/css/airi-jquery.mobile.css" />
     <link rel="stylesheet" href="/media/css/jquery.mobile-1.0a4.1.css">
     <link rel="stylesheet" href="/media/css/jquery.mobile.tabs.css">
-    <script type="text/javascript" src="/media/js/jquery-1.5.2.min.js"></script>
+    <script type="text/javascript" src="/media/js/jquery-1.6.1.min.js"></script>
     <script type="text/javascript" src="/media/js/custom.js"></script>
     <script type="text/javascript" src="/media/js/jquery.mobile-1.0a4.1.js"></script>
     <script type="text/javascript" src="/media/js/jquery.mobile.tabs.js"></script>
-    <script type="text/javascript" src="/media/js/jquery-ui-1.8.11.custom.min.js"></script>
-	<script type="text/javascript" src="/media/js/jquery.tools.min.js"></script>
-	<script type="text/javascript" src="/media/js/jQueryRotate.2.1.js"></script>
+    <script type="text/javascript" src="/media/js/jquery.tools.min.js"></script>
+    <script type="text/javascript" src="/media/js/jQueryRotate-2.1.js"></script>
     {% block extrahead %}{% endblock %}
 </head>
 
