--- a/python/airi/templates/base.html
+++ b/python/airi/templates/base.html
@@ -3,19 +3,15 @@
 <head>
 	<title>AIRi | {% block title %} {% endblock %}</title>
     <meta charset="utf-8" />
-    <!--meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=1;" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" /-->
 
-    <link rel="stylesheet" href="/media/css/cupertino/jquery-ui-1.8.10.custom.css" />
+    <link rel="stylesheet" href="/media/css/jquery.mobile-1.0a4.1.css" />
+    <link rel="stylesheet" href="/media/css/jquery.mobile.tabs.css" />
     <link rel="stylesheet" href="/media/css/airi-jquery.mobile.css" />
-    <link rel="stylesheet" href="/media/css/jquery.mobile-1.0a4.1.css">
-    <link rel="stylesheet" href="/media/css/jquery.mobile.tabs.css">
     <script type="text/javascript" src="/media/js/jquery-1.6.1.min.js"></script>
     <script type="text/javascript" src="/media/js/custom.js"></script>
     <script type="text/javascript" src="/media/js/jquery.mobile-1.0a4.1.js"></script>
     <script type="text/javascript" src="/media/js/jquery.mobile.tabs.js"></script>
-    <script type="text/javascript" src="/media/js/jquery.tools.min.js"></script>
+    <script type="text/javascript" src="/media/js/toolbox.flashembed.js"></script>
     <script type="text/javascript" src="/media/js/jQueryRotate-2.1.js"></script>
     {% block extrahead %}{% endblock %}
 </head>
