Added sco stream

--- a/python/airi/templates/stream.html
+++ b/python/airi/templates/stream.html
@@ -122,8 +122,8 @@
 	<div data-role="fieldcontain">
 		<fieldset data-role="controlgroup" data-type="horizontal">
 			<legend>Voice:</legend>
-			<a style="width: 49%" href="javascript: doConfigure('voice', True)" data-role="button">On</a>
-			<a style="width: 49%" href="javascript: doConfigure('voice', False)" data-role="button">Off</a>
+			<a style="width: 49%" href="javascript: doVoice(True)" data-role="button">On</a>
+			<a style="width: 49%" href="javascript: doVoice(False)" data-role="button">Off</a>
 		</fieldset>
 	</div>
 
