--- a/python/airi/media/css/jquery.mobile.tabs.css
+++ b/python/airi/media/css/jquery.mobile.tabs.css
@@ -1,7 +1,20 @@
 .ui-tabs-content {
-  display: none;
-  //margin-top: -15px;
+	display: none;
 }
+
 .ui-tabs-content-active {
-  display: block;
+	display: block;
+}
+
+#tab-video.ui-tabs-content {
+	visibility: hidden;
+	display: block !important;
+	width: 0px;
+	height: 0px;
+}
+
+#tab-video.ui-tabs-content-active {
+	visibility: visible !important;
+	width: 100%;
+	height: 100%;
 }
