--- a/python/airi/templates/base.html
+++ b/python/airi/templates/base.html
@@ -4,12 +4,12 @@
 	<title>AIRi | {% block title %} {% endblock %}</title>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="/media/css/jquery.mobile-1.0a4.1.css" />
+    <link rel="stylesheet" href="/media/css/jquery.mobile-1.0b1.css" />
     <link rel="stylesheet" href="/media/css/jquery.mobile.tabs.css" />
     <link rel="stylesheet" href="/media/css/airi-jquery.mobile.css" />
     <script type="text/javascript" src="/media/js/jquery-1.6.1.min.js"></script>
     <script type="text/javascript" src="/media/js/custom.js"></script>
-    <script type="text/javascript" src="/media/js/jquery.mobile-1.0a4.1.js"></script>
+    <script type="text/javascript" src="/media/js/jquery.mobile-1.0b1.js"></script>
     <script type="text/javascript" src="/media/js/jquery.mobile.tabs.js"></script>
     <script type="text/javascript" src="/media/js/toolbox.flashembed.js"></script>
     <script type="text/javascript" src="/media/js/jQueryRotate-2.1.js"></script>
