--- a/python/airi/media/css/airi-jquery.mobile.css
+++ b/python/airi/media/css/airi-jquery.mobile.css
@@ -142,3 +142,22 @@
     top: 3px !important;
     left: 0px;
 }
+
+#loading {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: blue;
+    z-index: 1000;
+}
+
+#loading h1 {
+    left: 50%;
+    top: 50%;
+    width: 300px;
+    height: 3em;
+    position: absolute;
+    margin: -1.5em 0 0 -150px;
+}
