--- a/python/airi/templates/base.html
+++ b/python/airi/templates/base.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AIRi | {% block title %} {% endblock %}</title>
+    <title>AIRi | {% block title %} {% endblock %}</title>
     <meta charset="utf-8" />
-
+    <link rel="shortcut icon" href="/media/favicon.ico" />
     <link rel="stylesheet" href="/media/css/jquery.mobile-1.0b1.css" />
     <link rel="stylesheet" href="/media/css/jquery.mobile.tabs.css" />
     <link rel="stylesheet" href="/media/css/airi-jquery.mobile.css" />
-    <script type="text/javascript" src="/media/js/jquery-1.6.1.min.js"></script>
-    <script type="text/javascript" src="/media/js/custom.js"></script>
-    <script type="text/javascript" src="/media/js/jquery.mobile-1.0b1.js"></script>
-    <script type="text/javascript" src="/media/js/jquery.mobile.tabs.js"></script>
-    <script type="text/javascript" src="/media/js/toolbox.flashembed.js"></script>
-    <script type="text/javascript" src="/media/js/jQueryRotate-2.1.js"></script>
     {% block extrahead %}{% endblock %}
 </head>
 
@@ -34,6 +28,9 @@
 
 {# now the scheleton itself #}
 <body>
+  <div id="loading">
+    <h1>AIRi is loading...</h1>
+  </div>
   <div data-role="page" id="{% block id %}home{% endblock %}">
     <div data-role="header">
       {{ button (  "#" ,
@@ -41,7 +38,7 @@
         "arrow-l",
         class="ui-btn-left",
         extra='id="back_button"') }}
-	  <h1>AIRi | {% block header_title %}{% endblock %}</h1>
+      <h1>AIRi | {% block header_title %}{% endblock %}</h1>
       {{ button (  "#" ,
         "Main" ,
         "home",
@@ -65,6 +62,12 @@
           extra='id="reload_button"') }}
     </div>
   </div>
+  <script type="text/javascript" src="/media/js/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src="/media/js/custom.js"></script>
+  <script type="text/javascript" src="/media/js/jquery.mobile-1.0b1.js"></script>
+  <script type="text/javascript" src="/media/js/jquery.mobile.tabs.js"></script>
+  <script type="text/javascript" src="/media/js/toolbox.flashembed.js"></script>
+  <script type="text/javascript" src="/media/js/jQueryRotate-2.1.js"></script>
 </body>
 </html>
 
