--- a/python/airi/templates/index.html
+++ b/python/airi/templates/index.html
@@ -4,12 +4,14 @@
 {% block header_title %}Devices{% endblock %}
 
 {% block content %}
-<ul data-role="listview" data-dividertheme="d" style="margin-top: 0;" data-split-icon="gear">
-    <li data-role="list-divider">Registered Cameras<span class="ui-li-count">{{ devices|length}}</span></li>
+<ul data-role="listview" data-dividertheme="d" style="margin-top: 0;" data-split-icon="gear" >
+    <li id="cameras" data-role="list-divider">Registered Cameras<span id="camera-count" class="ui-li-count">{{ devices|length}}</span></li>
     {% for camera in devices %}
-            <li {% if camera.status %} data-theme="b" {% else %} data-theme="d" {% endif %}>
+        <li class="register-camera" {% if camera.status %} data-theme="b" {% else %} data-theme="d" {% endif %}>
             <a href="/stream.html?address={{camera.address}}">
+                {% if camera.status %}
                 <img style="height: 100%;" src="/stream/{{camera.address}}?thumbnail=True"/>
+                {% endif %}
                 <h3>{{ camera.name }}</h3>
                 <p>{{ camera.address }}</p>
                 <span class="ui-li-count">Been viewed by: {{ camera.viewers|length }}</span>
